Missing local config fix and web.config fix

--- a/www/web.config
+++ b/www/web.config
@@ -3,37 +3,18 @@
 <!-- IIS configuration file -->
 
 <configuration>
-    <system.webServer>
-        <rewrite>
-            <rules>
-                <rule name="Imported Rule 1" stopProcessing="true">
-                    <match url="^(.*)$" ignoreCase="false" />
-                    <conditions logicalGrouping="MatchAll">
-                        <add input="{HTTP_HOST}" pattern="^(www|m)\." ignoreCase="false" negate="true" />
-                    </conditions>
-                    <action type="Redirect" url="http://www.{HTTP_HOST}/{R:1}" redirectType="Permanent" />
-                </rule>
-                <rule name="Imported Rule 2">
-                    <match url="/\.|^\." ignoreCase="false" />
-                    <action type="CustomResponse" statusCode="403" statusReason="Forbidden" statusDescription="Forbidden" />
-                </rule>
-                <rule name="Imported Rule 3" stopProcessing="true">
-                    <match url="\.(pdf|js|ico|gif|jpg|png|css|rar|zip|tar\.gz)$" ignoreCase="false" negate="true" />
-                    <conditions logicalGrouping="MatchAll">
-                        <add input="{REQUEST_FILENAME}" matchType="IsFile" ignoreCase="false" negate="true" />
-                        <add input="{REQUEST_FILENAME}" matchType="IsDirectory" ignoreCase="false" negate="true" />
-                    </conditions>
-                    <action type="Rewrite" url="index.php" />
-                </rule>
-                <rule name="Imported Rule 4" stopProcessing="true">
-                    <match url="^media/(teams|players)" ignoreCase="false" />
-                    <conditions logicalGrouping="MatchAll">
-                        <add input="{URL}" pattern="\.(jpg|jpeg|gif|png)$" />
-                        <add input="{REQUEST_FILENAME}" matchType="IsFile" ignoreCase="false" negate="true" />
-                    </conditions>
-                    <action type="Rewrite" url="media/no_{R:1}.png" />
-                </rule>
-            </rules>
-        </rewrite>
-    </system.webServer>
+	<system.webServer>
+		<rewrite>
+			<rules>
+				<rule name="Rewrite Rule 1" stopProcessing="true">
+					<match url="\.(pdf|js|ico|gif|jpg|png|css|rar|zip|tar\.gz)$" ignoreCase="false" negate="true" />
+					<conditions logicalGrouping="MatchAll">
+						<add input="{REQUEST_FILENAME}" matchType="IsFile" ignoreCase="false" negate="true" />
+						<add input="{REQUEST_FILENAME}" matchType="IsDirectory" ignoreCase="false" negate="true" />
+					</conditions>
+					<action type="Rewrite" url="index.php" />
+				</rule>
+			</rules>
+		</rewrite>
+	</system.webServer>
 </configuration>
