--- a/app/config/services.neon
+++ b/app/config/services.neon
@@ -17,3 +17,8 @@ services:
 		setup:
 			- addPath(appDir, %appDir%)
 			- addPath(templates, %appDir%/templates)
+
+	#factories
+	loginFormFactory:
+		class: Components\LoginForm
+		implement: Components\Factories\ILoginFormFactory
